Scala remains in version 2.12 due to compatibility with Cassandra Datastax Libraries